Actualizando index.html con contenido de la práctica de Git y GitHub

--- a/index.html
+++ b/index.html
@@ -1,23 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Practicando Git y GitHub</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            gap: 20px;
+        }
+        nav li {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
+        .titulo h1 {
+            color: #333;
+        }
+        .contenido p {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <nav>
             <ul>
                 <li>Inicio</li>
-                <li>Usuarios</li>
-                <li>Ventas</li>
-                
+                <li>Repositorio GitHub</li>
+                <li>Comandos Git Bash</li>
             </ul>
         </nav>
         <main>
             <div class="titulo">
-                <h1>Practicando GIT</h1>
+                <h1>Practicando Git y GitHub con Git Bash</h1>
+            </div>
+            <div class="contenido">
+                <p>Esta página es parte de una práctica para entender cómo Git y GitHub funcionan juntos.</p>
+                <p>Pasos realizados:</p>
+                <ul>
+                    <li>Creación de un repositorio local con <code>git init</code></li>
+                    <li>Primer commit con <code>git commit</code></li>
+                    <li>Enlace al repositorio remoto en GitHub</li>
+                    <li>Push de los cambios con <code>git push</code></li>
+                    <li>Modificación del archivo <code>index.html</code> para reflejar la práctica</li>
+                </ul>
             </div>
         </main>
     </div>
